# SimpleTetris

./: CMakeLists.txt  README.md
src/: controller.cpp  controller.h  game.cpp  game.h  main.cpp  player.cpp  player.h  renderer.cpp  renderer.h
